// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimeSearch renders default 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 16px;
  overflow-y: auto;
  padding-bottom: 32px;
  height: 100%;
  position: relative;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 16px;
  padding: 32px 64px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 16px;
}

.emotion-3 {
  font-weight: 500;
  color: #e7e7e7;
  font-size: 1.2rem;
  line-height: 1;
  text-shadow: 0 0 2px black,0 0 6px black;
  margin-bottom: 24px;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-transform: unset;
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 1.5rem;
  padding: 8px;
  border-radius: 50%;
  overflow: visible;
  color: #fff;
  -webkit-transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 36px;
  min-width: 36px;
  color: #e9ebf0;
  padding: 8px 6px;
  background-color: #292d33;
  margin-bottom: 0;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  outline: 0!important;
  white-space: nowrap;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 1.2rem;
  line-height: 1.42857143;
  border-radius: 6px;
}

.emotion-5::-moz-focus-inner {
  border-style: none;
}

.emotion-5.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-5 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-5:hover {
  background-color: rgba(255, 255, 255, 0.08);
}

@media (hover: none) {
  .emotion-5:hover {
    background-color: transparent;
  }
}

.emotion-5.Mui-disabled {
  background-color: transparent;
  color: rgba(255, 255, 255, 0.3);
}

.emotion-5:hover {
  background-color: #3c3f43;
}

.emotion-5.Mui-disabled {
  color: rgb(255 255 255 / 25%);
}

.emotion-6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
  font-size: inherit;
}

.emotion-7 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  row-gap: 24px;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: hidden;
}

.emotion-9 {
  position: relative;
  border-radius: 4px;
  overflow: hidden;
  width: var(--width);
  height: var(--height);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  cursor: pointer;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (max-width: 7396px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 22 * 16px - 2 *
                72px
            ) / 23
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 7080px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 21 * 16px - 2 *
                72px
            ) / 22
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6764px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 20 * 16px - 2 *
                72px
            ) / 21
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6448px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 19 * 16px - 2 *
                72px
            ) / 20
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6132px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 18 * 16px - 2 *
                72px
            ) / 19
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5816px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 17 * 16px - 2 *
                72px
            ) / 18
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5500px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 16 * 16px - 2 *
                72px
            ) / 17
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5184px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 15 * 16px - 2 *
                72px
            ) / 16
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4868px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 14 * 16px - 2 *
                72px
            ) / 15
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4552px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 13 * 16px - 2 *
                72px
            ) / 14
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4236px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 12 * 16px - 2 *
                72px
            ) / 13
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3920px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 11 * 16px - 2 *
                72px
            ) / 12
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3604px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 10 * 16px - 2 *
                72px
            ) / 11
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3288px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 9 * 16px - 2 *
                72px
            ) / 10
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2972px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 8 * 16px - 2 *
                72px
            ) / 9
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2656px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 7 * 16px - 2 *
                72px
            ) / 8
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2340px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 6 * 16px - 2 *
                72px
            ) / 7
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2024px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 5 * 16px - 2 *
                72px
            ) / 6
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1708px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 4 * 16px - 2 *
                72px
            ) / 5
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1392px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 3 * 16px - 2 *
                72px
            ) / 4
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1076px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 2 * 16px - 2 *
                72px
            ) / 3
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 760px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 1 * 16px - 2 *
                72px
            ) / 2
        );
    --height: calc(var(--width) * 0.94);
    --height: calc(var(--width) * 0.84);
  }
}

@media (max-width: 444px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 0 * 16px - 2 *
                72px
            ) / 1
        );
    --height: calc(var(--width) * 0.94);
  }
}

.emotion-9 .ManageButtons {
  opacity: 0;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.emotion-9:hover {
  z-index: 10;
}

.emotion-9:hover .ManageButtons {
  opacity: 1;
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
}

.emotion-11 {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  background-color: #292d33;
  padding: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-13 {
  font-weight: 400;
  color: white;
  font-size: 1rem;
  line-height: 1;
  margin-bottom: 4px;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

<body>
  <div>
    <div
      class="emotion-0"
      style="opacity: 1; webkit-transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <div
        class="emotion-1"
        style="padding: 32px 72px;"
      >
        <div
          class="emotion-2"
          style="align-items: center;"
        >
          <h2
            class="emotion-3"
            style="font-size: 1.5rem; white-space: pre;"
          >
            Resultados de 
            <span
              style="opacity: 0.8;"
            >
              "
              anime name to search
              "
            </span>
          </h2>
          <div
            class="emotion-4"
          />
          <button
            aria-label="Cerrar"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-5"
            data-mui-internal-clone-element="true"
            data-testid="anime-search-close-button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-6"
              data-testid="CloseRoundedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M18.3 5.71a.9959.9959 0 0 0-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 0 0-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4"
              />
            </svg>
            <span
              class="MuiTouchRipple-root emotion-7"
            />
          </button>
        </div>
        <div
          class="emotion-8"
          style="column-gap: 16px;"
        >
          <div>
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                data-testid="anime-entry-background"
              >
                <div
                  class="emotion-10"
                >
                  <img
                    alt="anime name 0"
                    class="emotion-11"
                    src="image url 0"
                  />
                </div>
                <div
                  class="emotion-12 AnimeInfo"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    aria-label="anime name 0"
                    class=" emotion-13"
                    data-mui-internal-clone-element="true"
                  >
                    anime name 0
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 1500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                data-testid="anime-entry-background"
              >
                <div
                  class="emotion-10"
                >
                  <img
                    alt="anime name 1"
                    class="emotion-11"
                    src="image url 1"
                  />
                </div>
                <div
                  class="emotion-12 AnimeInfo"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    aria-label="anime name 1"
                    class=" emotion-13"
                    data-mui-internal-clone-element="true"
                  >
                    anime name 1
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 2000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 2000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                data-testid="anime-entry-background"
              >
                <div
                  class="emotion-10"
                >
                  <img
                    alt="anime name 2"
                    class="emotion-11"
                    src="image url 2"
                  />
                </div>
                <div
                  class="emotion-12 AnimeInfo"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    aria-label="anime name 2"
                    class=" emotion-13"
                    data-mui-internal-clone-element="true"
                  >
                    anime name 2
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 2500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 2500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                data-testid="anime-entry-background"
              >
                <div
                  class="emotion-10"
                >
                  <img
                    alt="anime name 3"
                    class="emotion-11"
                    src="image url 3"
                  />
                </div>
                <div
                  class="emotion-12 AnimeInfo"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    aria-label="anime name 3"
                    class=" emotion-13"
                    data-mui-internal-clone-element="true"
                  >
                    anime name 3
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 3000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 3000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                data-testid="anime-entry-background"
              >
                <div
                  class="emotion-10"
                >
                  <img
                    alt="anime name 4"
                    class="emotion-11"
                    src="image url 4"
                  />
                </div>
                <div
                  class="emotion-12 AnimeInfo"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    aria-label="anime name 4"
                    class=" emotion-13"
                    data-mui-internal-clone-element="true"
                  >
                    anime name 4
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 3500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 3500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                data-testid="anime-entry-background"
              >
                <div
                  class="emotion-10"
                >
                  <img
                    alt="anime name 5"
                    class="emotion-11"
                    src="image url 5"
                  />
                </div>
                <div
                  class="emotion-12 AnimeInfo"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    aria-label="anime name 5"
                    class=" emotion-13"
                    data-mui-internal-clone-element="true"
                  >
                    anime name 5
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 4000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 4000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                data-testid="anime-entry-background"
              >
                <div
                  class="emotion-10"
                >
                  <img
                    alt="anime name 6"
                    class="emotion-11"
                    src="image url 6"
                  />
                </div>
                <div
                  class="emotion-12 AnimeInfo"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    aria-label="anime name 6"
                    class=" emotion-13"
                    data-mui-internal-clone-element="true"
                  >
                    anime name 6
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 4500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 4500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                data-testid="anime-entry-background"
              >
                <div
                  class="emotion-10"
                >
                  <img
                    alt="anime name 7"
                    class="emotion-11"
                    src="image url 7"
                  />
                </div>
                <div
                  class="emotion-12 AnimeInfo"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    aria-label="anime name 7"
                    class=" emotion-13"
                    data-mui-internal-clone-element="true"
                  >
                    anime name 7
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 5000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 5000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                data-testid="anime-entry-background"
              >
                <div
                  class="emotion-10"
                >
                  <img
                    alt="anime name 8"
                    class="emotion-11"
                    src="image url 8"
                  />
                </div>
                <div
                  class="emotion-12 AnimeInfo"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    aria-label="anime name 8"
                    class=" emotion-13"
                    data-mui-internal-clone-element="true"
                  >
                    anime name 8
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 5500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 5500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                data-testid="anime-entry-background"
              >
                <div
                  class="emotion-10"
                >
                  <img
                    alt="anime name 9"
                    class="emotion-11"
                    src="image url 9"
                  />
                </div>
                <div
                  class="emotion-12 AnimeInfo"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    aria-label="anime name 9"
                    class=" emotion-13"
                    data-mui-internal-clone-element="true"
                  >
                    anime name 9
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 6000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 6000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                data-testid="anime-entry-background"
              >
                <div
                  class="emotion-10"
                >
                  <img
                    alt="anime name 10"
                    class="emotion-11"
                    src="image url 10"
                  />
                </div>
                <div
                  class="emotion-12 AnimeInfo"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    aria-label="anime name 10"
                    class=" emotion-13"
                    data-mui-internal-clone-element="true"
                  >
                    anime name 10
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 6000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 6000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                data-testid="anime-entry-background"
              >
                <div
                  class="emotion-10"
                >
                  <img
                    alt="anime name 11"
                    class="emotion-11"
                    src="image url 11"
                  />
                </div>
                <div
                  class="emotion-12 AnimeInfo"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    aria-label="anime name 11"
                    class=" emotion-13"
                    data-mui-internal-clone-element="true"
                  >
                    anime name 11
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            data-testid="waypoint-div"
          >
            [Waypoint]
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`AnimeSearch renders default when loading 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 16px;
  overflow-y: auto;
  padding-bottom: 32px;
  height: 100%;
  position: relative;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 16px;
  padding: 32px 64px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 16px;
}

.emotion-3 {
  font-weight: 500;
  color: #e7e7e7;
  font-size: 1.2rem;
  line-height: 1;
  text-shadow: 0 0 2px black,0 0 6px black;
  margin-bottom: 24px;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-transform: unset;
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 1.5rem;
  padding: 8px;
  border-radius: 50%;
  overflow: visible;
  color: #fff;
  -webkit-transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 36px;
  min-width: 36px;
  color: #e9ebf0;
  padding: 8px 6px;
  background-color: #292d33;
  margin-bottom: 0;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  outline: 0!important;
  white-space: nowrap;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 1.2rem;
  line-height: 1.42857143;
  border-radius: 6px;
}

.emotion-5::-moz-focus-inner {
  border-style: none;
}

.emotion-5.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-5 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-5:hover {
  background-color: rgba(255, 255, 255, 0.08);
}

@media (hover: none) {
  .emotion-5:hover {
    background-color: transparent;
  }
}

.emotion-5.Mui-disabled {
  background-color: transparent;
  color: rgba(255, 255, 255, 0.3);
}

.emotion-5:hover {
  background-color: #3c3f43;
}

.emotion-5.Mui-disabled {
  color: rgb(255 255 255 / 25%);
}

.emotion-6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
  font-size: inherit;
}

.emotion-7 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  row-gap: 24px;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: hidden;
}

.emotion-9 {
  position: relative;
  border-radius: 4px;
  overflow: hidden;
  width: var(--width);
  height: var(--height);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  cursor: pointer;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (max-width: 7396px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 22 * 16px - 2 *
                72px
            ) / 23
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 7080px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 21 * 16px - 2 *
                72px
            ) / 22
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6764px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 20 * 16px - 2 *
                72px
            ) / 21
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6448px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 19 * 16px - 2 *
                72px
            ) / 20
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6132px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 18 * 16px - 2 *
                72px
            ) / 19
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5816px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 17 * 16px - 2 *
                72px
            ) / 18
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5500px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 16 * 16px - 2 *
                72px
            ) / 17
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5184px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 15 * 16px - 2 *
                72px
            ) / 16
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4868px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 14 * 16px - 2 *
                72px
            ) / 15
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4552px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 13 * 16px - 2 *
                72px
            ) / 14
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4236px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 12 * 16px - 2 *
                72px
            ) / 13
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3920px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 11 * 16px - 2 *
                72px
            ) / 12
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3604px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 10 * 16px - 2 *
                72px
            ) / 11
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3288px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 9 * 16px - 2 *
                72px
            ) / 10
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2972px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 8 * 16px - 2 *
                72px
            ) / 9
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2656px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 7 * 16px - 2 *
                72px
            ) / 8
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2340px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 6 * 16px - 2 *
                72px
            ) / 7
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2024px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 5 * 16px - 2 *
                72px
            ) / 6
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1708px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 4 * 16px - 2 *
                72px
            ) / 5
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1392px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 3 * 16px - 2 *
                72px
            ) / 4
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1076px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 2 * 16px - 2 *
                72px
            ) / 3
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 760px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 1 * 16px - 2 *
                72px
            ) / 2
        );
    --height: calc(var(--width) * 0.94);
    --height: calc(var(--width) * 0.84);
  }
}

@media (max-width: 444px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 0 * 16px - 2 *
                72px
            ) / 1
        );
    --height: calc(var(--width) * 0.94);
  }
}

.emotion-9 .ManageButtons {
  opacity: 0;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.emotion-9:hover {
  z-index: 10;
}

.emotion-9:hover .ManageButtons {
  opacity: 1;
}

<body>
  <div>
    <div
      class="emotion-0"
      style="opacity: 1; webkit-transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <div
        class="emotion-1"
        style="padding: 32px 72px;"
      >
        <div
          class="emotion-2"
          style="align-items: center;"
        >
          <h2
            class="emotion-3"
            style="font-size: 1.5rem; white-space: pre;"
          >
            Resultados de 
            <span
              style="opacity: 0.8;"
            >
              "
              anime name to search
              "
            </span>
          </h2>
          <div
            class="emotion-4"
          />
          <button
            aria-label="Cerrar"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-5"
            data-mui-internal-clone-element="true"
            data-testid="anime-search-close-button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-6"
              data-testid="CloseRoundedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M18.3 5.71a.9959.9959 0 0 0-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 0 0-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4"
              />
            </svg>
            <span
              class="MuiTouchRipple-root emotion-7"
            />
          </button>
        </div>
        <div
          class="emotion-8"
          style="column-gap: 16px;"
        >
          <div
            style="opacity: 1;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.9857142857142858;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.9714285714285714;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.9571428571428571;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 1700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.9428571428571428;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 2200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 2200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.9285714285714286;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 2700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 2700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.9142857142857143;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 3200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 3200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.9;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 3700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 3700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.8857142857142857;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 4200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 4200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.8714285714285714;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 4700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 4700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.8571428571428572;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 5200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 5200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.8428571428571429;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 5700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 5700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.8285714285714285;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 6200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 6200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.8142857142857143;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 6700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 6700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.8;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 7200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 7200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.7857142857142857;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 7700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 7700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.7714285714285715;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 8200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 8200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.7571428571428571;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 8700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 8700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.7428571428571429;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 9200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 9200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.7285714285714286;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 9700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 9700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.7142857142857143;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 10200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 10200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.7;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 10700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 10700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.6857142857142857;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 11200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 11200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.6714285714285715;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 11700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 11700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.6571428571428571;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 12200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 12200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.6428571428571428;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 12700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 12700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.6285714285714286;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 13200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 13200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.6142857142857143;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 13700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 13700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.6;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 14200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 14200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.5857142857142856;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 14700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 14700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.5714285714285714;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 15200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 15200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.5571428571428572;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 15700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 15700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.5428571428571429;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 16200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 16200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.5285714285714286;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 16700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 16700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.5142857142857142;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 17200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 17200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.5;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 17700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 17700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`AnimeSearch renders default when loading more 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 16px;
  overflow-y: auto;
  padding-bottom: 32px;
  height: 100%;
  position: relative;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 16px;
  padding: 32px 64px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 16px;
}

.emotion-3 {
  font-weight: 500;
  color: #e7e7e7;
  font-size: 1.2rem;
  line-height: 1;
  text-shadow: 0 0 2px black,0 0 6px black;
  margin-bottom: 24px;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-transform: unset;
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 1.5rem;
  padding: 8px;
  border-radius: 50%;
  overflow: visible;
  color: #fff;
  -webkit-transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 36px;
  min-width: 36px;
  color: #e9ebf0;
  padding: 8px 6px;
  background-color: #292d33;
  margin-bottom: 0;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  outline: 0!important;
  white-space: nowrap;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 1.2rem;
  line-height: 1.42857143;
  border-radius: 6px;
}

.emotion-5::-moz-focus-inner {
  border-style: none;
}

.emotion-5.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-5 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-5:hover {
  background-color: rgba(255, 255, 255, 0.08);
}

@media (hover: none) {
  .emotion-5:hover {
    background-color: transparent;
  }
}

.emotion-5.Mui-disabled {
  background-color: transparent;
  color: rgba(255, 255, 255, 0.3);
}

.emotion-5:hover {
  background-color: #3c3f43;
}

.emotion-5.Mui-disabled {
  color: rgb(255 255 255 / 25%);
}

.emotion-6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
  font-size: inherit;
}

.emotion-7 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  row-gap: 24px;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: hidden;
}

.emotion-9 {
  position: relative;
  border-radius: 4px;
  overflow: hidden;
  width: var(--width);
  height: var(--height);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  cursor: pointer;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (max-width: 7396px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 22 * 16px - 2 *
                72px
            ) / 23
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 7080px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 21 * 16px - 2 *
                72px
            ) / 22
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6764px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 20 * 16px - 2 *
                72px
            ) / 21
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6448px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 19 * 16px - 2 *
                72px
            ) / 20
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6132px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 18 * 16px - 2 *
                72px
            ) / 19
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5816px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 17 * 16px - 2 *
                72px
            ) / 18
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5500px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 16 * 16px - 2 *
                72px
            ) / 17
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5184px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 15 * 16px - 2 *
                72px
            ) / 16
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4868px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 14 * 16px - 2 *
                72px
            ) / 15
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4552px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 13 * 16px - 2 *
                72px
            ) / 14
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4236px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 12 * 16px - 2 *
                72px
            ) / 13
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3920px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 11 * 16px - 2 *
                72px
            ) / 12
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3604px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 10 * 16px - 2 *
                72px
            ) / 11
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3288px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 9 * 16px - 2 *
                72px
            ) / 10
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2972px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 8 * 16px - 2 *
                72px
            ) / 9
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2656px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 7 * 16px - 2 *
                72px
            ) / 8
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2340px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 6 * 16px - 2 *
                72px
            ) / 7
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2024px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 5 * 16px - 2 *
                72px
            ) / 6
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1708px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 4 * 16px - 2 *
                72px
            ) / 5
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1392px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 3 * 16px - 2 *
                72px
            ) / 4
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1076px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 2 * 16px - 2 *
                72px
            ) / 3
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 760px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 1 * 16px - 2 *
                72px
            ) / 2
        );
    --height: calc(var(--width) * 0.94);
    --height: calc(var(--width) * 0.84);
  }
}

@media (max-width: 444px) {
  .emotion-9 {
    --width: calc(
          (
              100vw - 0 * 16px - 2 *
                72px
            ) / 1
        );
    --height: calc(var(--width) * 0.94);
  }
}

.emotion-9 .ManageButtons {
  opacity: 0;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.emotion-9:hover {
  z-index: 10;
}

.emotion-9:hover .ManageButtons {
  opacity: 1;
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
}

.emotion-11 {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  background-color: #292d33;
  padding: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-13 {
  font-weight: 400;
  color: white;
  font-size: 1rem;
  line-height: 1;
  margin-bottom: 4px;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

<body>
  <div>
    <div
      class="emotion-0"
      style="opacity: 1; webkit-transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <div
        class="emotion-1"
        style="padding: 32px 72px;"
      >
        <div
          class="emotion-2"
          style="align-items: center;"
        >
          <h2
            class="emotion-3"
            style="font-size: 1.5rem; white-space: pre;"
          >
            Resultados de 
            <span
              style="opacity: 0.8;"
            >
              "
              anime name to search
              "
            </span>
          </h2>
          <div
            class="emotion-4"
          />
          <button
            aria-label="Cerrar"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-5"
            data-mui-internal-clone-element="true"
            data-testid="anime-search-close-button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-6"
              data-testid="CloseRoundedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M18.3 5.71a.9959.9959 0 0 0-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 0 0-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4"
              />
            </svg>
            <span
              class="MuiTouchRipple-root emotion-7"
            />
          </button>
        </div>
        <div
          class="emotion-8"
          style="column-gap: 16px;"
        >
          <div>
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                data-testid="anime-entry-background"
              >
                <div
                  class="emotion-10"
                >
                  <img
                    alt="anime name 0"
                    class="emotion-11"
                    src="image url 0"
                  />
                </div>
                <div
                  class="emotion-12 AnimeInfo"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    aria-label="anime name 0"
                    class=" emotion-13"
                    data-mui-internal-clone-element="true"
                  >
                    anime name 0
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 1500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                data-testid="anime-entry-background"
              >
                <div
                  class="emotion-10"
                >
                  <img
                    alt="anime name 1"
                    class="emotion-11"
                    src="image url 1"
                  />
                </div>
                <div
                  class="emotion-12 AnimeInfo"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    aria-label="anime name 1"
                    class=" emotion-13"
                    data-mui-internal-clone-element="true"
                  >
                    anime name 1
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 2000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 2000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                data-testid="anime-entry-background"
              >
                <div
                  class="emotion-10"
                >
                  <img
                    alt="anime name 2"
                    class="emotion-11"
                    src="image url 2"
                  />
                </div>
                <div
                  class="emotion-12 AnimeInfo"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    aria-label="anime name 2"
                    class=" emotion-13"
                    data-mui-internal-clone-element="true"
                  >
                    anime name 2
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 2500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 2500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                data-testid="anime-entry-background"
              >
                <div
                  class="emotion-10"
                >
                  <img
                    alt="anime name 3"
                    class="emotion-11"
                    src="image url 3"
                  />
                </div>
                <div
                  class="emotion-12 AnimeInfo"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    aria-label="anime name 3"
                    class=" emotion-13"
                    data-mui-internal-clone-element="true"
                  >
                    anime name 3
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 3000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 3000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                data-testid="anime-entry-background"
              >
                <div
                  class="emotion-10"
                >
                  <img
                    alt="anime name 4"
                    class="emotion-11"
                    src="image url 4"
                  />
                </div>
                <div
                  class="emotion-12 AnimeInfo"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    aria-label="anime name 4"
                    class=" emotion-13"
                    data-mui-internal-clone-element="true"
                  >
                    anime name 4
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 3500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 3500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                data-testid="anime-entry-background"
              >
                <div
                  class="emotion-10"
                >
                  <img
                    alt="anime name 5"
                    class="emotion-11"
                    src="image url 5"
                  />
                </div>
                <div
                  class="emotion-12 AnimeInfo"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    aria-label="anime name 5"
                    class=" emotion-13"
                    data-mui-internal-clone-element="true"
                  >
                    anime name 5
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 4000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 4000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                data-testid="anime-entry-background"
              >
                <div
                  class="emotion-10"
                >
                  <img
                    alt="anime name 6"
                    class="emotion-11"
                    src="image url 6"
                  />
                </div>
                <div
                  class="emotion-12 AnimeInfo"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    aria-label="anime name 6"
                    class=" emotion-13"
                    data-mui-internal-clone-element="true"
                  >
                    anime name 6
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 4500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 4500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                data-testid="anime-entry-background"
              >
                <div
                  class="emotion-10"
                >
                  <img
                    alt="anime name 7"
                    class="emotion-11"
                    src="image url 7"
                  />
                </div>
                <div
                  class="emotion-12 AnimeInfo"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    aria-label="anime name 7"
                    class=" emotion-13"
                    data-mui-internal-clone-element="true"
                  >
                    anime name 7
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 5000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 5000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                data-testid="anime-entry-background"
              >
                <div
                  class="emotion-10"
                >
                  <img
                    alt="anime name 8"
                    class="emotion-11"
                    src="image url 8"
                  />
                </div>
                <div
                  class="emotion-12 AnimeInfo"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    aria-label="anime name 8"
                    class=" emotion-13"
                    data-mui-internal-clone-element="true"
                  >
                    anime name 8
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 5500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 5500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                data-testid="anime-entry-background"
              >
                <div
                  class="emotion-10"
                >
                  <img
                    alt="anime name 9"
                    class="emotion-11"
                    src="image url 9"
                  />
                </div>
                <div
                  class="emotion-12 AnimeInfo"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    aria-label="anime name 9"
                    class=" emotion-13"
                    data-mui-internal-clone-element="true"
                  >
                    anime name 9
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 6000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 6000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                data-testid="anime-entry-background"
              >
                <div
                  class="emotion-10"
                >
                  <img
                    alt="anime name 10"
                    class="emotion-11"
                    src="image url 10"
                  />
                </div>
                <div
                  class="emotion-12 AnimeInfo"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    aria-label="anime name 10"
                    class=" emotion-13"
                    data-mui-internal-clone-element="true"
                  >
                    anime name 10
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 6000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 6000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                data-testid="anime-entry-background"
              >
                <div
                  class="emotion-10"
                >
                  <img
                    alt="anime name 11"
                    class="emotion-11"
                    src="image url 11"
                  />
                </div>
                <div
                  class="emotion-12 AnimeInfo"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    aria-label="anime name 11"
                    class=" emotion-13"
                    data-mui-internal-clone-element="true"
                  >
                    anime name 11
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 1;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.9545454545454546;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.9090909090909091;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.8636363636363636;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 1700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.8181818181818181;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 2200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 2200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.7727272727272727;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 2700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 2700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.7272727272727273;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 3200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 3200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.6818181818181819;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 3700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 3700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.6363636363636364;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 4200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 4200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.5909090909090908;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 4700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 4700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.5454545454545454;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 5200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 5200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            style="opacity: 0.5;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 5700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 5700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="emotion-9"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`AnimeSearch renders default when no results 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 16px;
  overflow-y: auto;
  padding-bottom: 32px;
  height: 100%;
  position: relative;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 16px;
  padding: 32px 64px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 16px;
}

.emotion-3 {
  font-weight: 500;
  color: #e7e7e7;
  font-size: 1.2rem;
  line-height: 1;
  text-shadow: 0 0 2px black,0 0 6px black;
  margin-bottom: 24px;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-transform: unset;
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 1.5rem;
  padding: 8px;
  border-radius: 50%;
  overflow: visible;
  color: #fff;
  -webkit-transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 36px;
  min-width: 36px;
  color: #e9ebf0;
  padding: 8px 6px;
  background-color: #292d33;
  margin-bottom: 0;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  outline: 0!important;
  white-space: nowrap;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 1.2rem;
  line-height: 1.42857143;
  border-radius: 6px;
}

.emotion-5::-moz-focus-inner {
  border-style: none;
}

.emotion-5.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-5 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-5:hover {
  background-color: rgba(255, 255, 255, 0.08);
}

@media (hover: none) {
  .emotion-5:hover {
    background-color: transparent;
  }
}

.emotion-5.Mui-disabled {
  background-color: transparent;
  color: rgba(255, 255, 255, 0.3);
}

.emotion-5:hover {
  background-color: #3c3f43;
}

.emotion-5.Mui-disabled {
  color: rgb(255 255 255 / 25%);
}

.emotion-6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
  font-size: inherit;
}

.emotion-7 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  row-gap: 24px;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: hidden;
}

<body>
  <div>
    <div
      class="emotion-0"
      style="opacity: 1; webkit-transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <div
        class="emotion-1"
        style="padding: 32px 72px;"
      >
        <div
          class="emotion-2"
          style="align-items: center;"
        >
          <h2
            class="emotion-3"
            style="font-size: 1.5rem; white-space: pre;"
          >
            No hay resultados para
             
            <span
              style="opacity: 0.8;"
            >
              "
              anime name to search
              "
            </span>
          </h2>
          <div
            class="emotion-4"
          />
          <button
            aria-label="Cerrar"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-5"
            data-mui-internal-clone-element="true"
            data-testid="anime-search-close-button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-6"
              data-testid="CloseRoundedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M18.3 5.71a.9959.9959 0 0 0-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 0 0-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4"
              />
            </svg>
            <span
              class="MuiTouchRipple-root emotion-7"
            />
          </button>
        </div>
        <div
          class="emotion-8"
          style="column-gap: 16px;"
        >
          <div
            data-testid="waypoint-div"
          >
            [Waypoint]
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
